--- a/Binary Prediction with a Rainfall/2.ipynb
+++ b/Binary Prediction with a Rainfall/2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "id": "8ee4a9a8",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "id": "84415028",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "dedf026d",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "ca8f3cd4",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "max       300.000000    59.500000     1.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "5c3bb214",
    "metadata": {},
    "outputs": [],
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "id": "e9b7b377",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "id": "5508adb4",
    "metadata": {},
    "outputs": [],
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "id": "bec93d4c",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "id": "1f3d3bb7",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "id": "6b326d1d",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "id": "947bae70",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "id": "6314e6f6",
    "metadata": {},
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "id": "fa3d0750",
    "metadata": {},
    "outputs": [],
@@ -537,15 +537,95 @@
     "        'learning_rate': [0.01, 0.1]\n",
     "    }\n",
     "}\n",
+    "\n",
+    "\n",
+    "# param_grids = {\n",
+    "#     'RandomForest': {\n",
+    "#         'n_estimators': [100, 200, 300],\n",
+    "#         'max_depth': [10, 20, 30, None],\n",
+    "#         'min_samples_split': [2, 5, 10],\n",
+    "#         'min_samples_leaf': [1, 2, 4],\n",
+    "#         'max_features': ['sqrt', 'log2', None],\n",
+    "#         'bootstrap': [True, False]\n",
+    "#     },\n",
+    "\n",
+    "#     'XGBoost': {\n",
+    "#         'n_estimators': [100, 200, 300],\n",
+    "#         'max_depth': [3, 6, 9, 12],\n",
+    "#         'learning_rate': [0.01, 0.05, 0.1, 0.2],\n",
+    "#         'subsample': [0.6, 0.8, 1.0],\n",
+    "#         'colsample_bytree': [0.6, 0.8, 1.0],\n",
+    "#         'gamma': [0, 0.1, 0.3, 0.5],\n",
+    "#         'reg_alpha': [0, 0.1, 1],     # L1 regularization\n",
+    "#         'reg_lambda': [1, 1.5, 2]     # L2 regularization\n",
+    "#     },\n",
+    "\n",
+    "#     'LightGBM': {\n",
+    "#         'n_estimators': [100, 200, 300],\n",
+    "#         'max_depth': [3, 6, 9, -1],\n",
+    "#         'learning_rate': [0.01, 0.05, 0.1, 0.2],\n",
+    "#         'num_leaves': [31, 50, 100],\n",
+    "#         'min_child_samples': [10, 20, 30],\n",
+    "#         'subsample': [0.6, 0.8, 1.0],\n",
+    "#         'colsample_bytree': [0.6, 0.8, 1.0],\n",
+    "#         'reg_alpha': [0, 0.1, 1],\n",
+    "#         'reg_lambda': [1, 1.5, 2]\n",
+    "#     }\n",
+    "# }\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "id": "083fea91",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Sajjad Khan\\miniconda3\\envs\\ml_env\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:528: FitFailedWarning: \n",
+      "1 fits failed out of a total of 60.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "1 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Sajjad Khan\\miniconda3\\envs\\ml_env\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 866, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"c:\\Users\\Sajjad Khan\\miniconda3\\envs\\ml_env\\lib\\site-packages\\sklearn\\base.py\", line 1389, in wrapper\n",
+      "    return fit_method(estimator, *args, **kwargs)\n",
+      "  File \"c:\\Users\\Sajjad Khan\\miniconda3\\envs\\ml_env\\lib\\site-packages\\sklearn\\ensemble\\_forest.py\", line 487, in fit\n",
+      "    trees = Parallel(\n",
+      "  File \"c:\\Users\\Sajjad Khan\\miniconda3\\envs\\ml_env\\lib\\site-packages\\sklearn\\utils\\parallel.py\", line 77, in __call__\n",
+      "    return super().__call__(iterable_with_config)\n",
+      "  File \"c:\\Users\\Sajjad Khan\\miniconda3\\envs\\ml_env\\lib\\site-packages\\joblib\\parallel.py\", line 1918, in __call__\n",
+      "    return output if self.return_generator else list(output)\n",
+      "  File \"c:\\Users\\Sajjad Khan\\miniconda3\\envs\\ml_env\\lib\\site-packages\\joblib\\parallel.py\", line 1847, in _get_sequential_output\n",
+      "    res = func(*args, **kwargs)\n",
+      "  File \"c:\\Users\\Sajjad Khan\\miniconda3\\envs\\ml_env\\lib\\site-packages\\sklearn\\utils\\parallel.py\", line 139, in __call__\n",
+      "    return self.function(*args, **kwargs)\n",
+      "  File \"c:\\Users\\Sajjad Khan\\miniconda3\\envs\\ml_env\\lib\\site-packages\\sklearn\\ensemble\\_forest.py\", line 189, in _parallel_build_trees\n",
+      "    tree._fit(\n",
+      "  File \"c:\\Users\\Sajjad Khan\\miniconda3\\envs\\ml_env\\lib\\site-packages\\sklearn\\tree\\_classes.py\", line 472, in _fit\n",
+      "    builder.build(self.tree_, X, y, sample_weight, missing_values_in_feature_mask)\n",
+      "  File \"_tree.pyx\", line 153, in sklearn.tree._tree.DepthFirstTreeBuilder.build\n",
+      "  File \"_tree.pyx\", line 268, in sklearn.tree._tree.DepthFirstTreeBuilder.build\n",
+      "  File \"_tree.pyx\", line 923, in sklearn.tree._tree.Tree._add_node\n",
+      "  File \"_tree.pyx\", line 891, in sklearn.tree._tree.Tree._resize_c\n",
+      "  File \"_utils.pyx\", line 29, in sklearn.tree._utils.safe_realloc\n",
+      "MemoryError: could not allocate 32768 bytes\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "c:\\Users\\Sajjad Khan\\miniconda3\\envs\\ml_env\\lib\\site-packages\\sklearn\\model_selection\\_search.py:1108: UserWarning: One or more of the test scores are non-finite: [0.89576623 0.8948197  0.89356993 0.89390918 0.89084731 0.89359506\n",
+      " 0.89187211 0.89278759 0.8911912         nan 0.89199627 0.89287478]\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -558,7 +638,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Sajjad Khan\\miniconda3\\envs\\ml_env\\lib\\site-packages\\xgboost\\training.py:183: UserWarning: [17:29:00] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
+      "c:\\Users\\Sajjad Khan\\miniconda3\\envs\\ml_env\\lib\\site-packages\\xgboost\\training.py:183: UserWarning: [18:09:39] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  bst.update(dtrain, iteration=i, fobj=obj)\n"
@@ -571,9 +651,8 @@
       "XGBoost Best AUC: 0.8978\n",
       "Best Parameters: {'learning_rate': 0.01, 'max_depth': 3, 'n_estimators': 200}\n",
       "[LightGBM] [Info] Number of positive: 1331, number of negative: 421\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000194 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000599 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 2436\n",
       "[LightGBM] [Info] Number of data points in the train set: 1752, number of used features: 15\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.759703 -> initscore=1.151053\n",
@@ -830,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "id": "a409c798",
    "metadata": {},
    "outputs": [
@@ -883,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "id": "dd675b63",
    "metadata": {},
    "outputs": [
@@ -929,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "id": "5a3dd94f",
    "metadata": {},
    "outputs": [],
@@ -983,25 +1062,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "id": "2c575bef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model saved as best_model.pkl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Now save the model in pickle format\n",
-    "import pickle\n",
+    "# # Now save the model in pickle format\n",
+    "# import pickle\n",
     "\n",
-    "with open('best_model.pkl', 'wb') as f:\n",
-    "    pickle.dump(best_models['LightGBM'], f)\n",
-    "print(\"Model saved as best_model.pkl\")"
+    "# with open('best_model.pkl', 'wb') as f:\n",
+    "#     pickle.dump(best_models['LightGBM'], f)\n",
+    "# print(\"Model saved as best_model.pkl\")"
    ]
   },
   {
