-add-rainfall-project

--- a/molecular-machine-learning/molecular.ipynb
+++ b/molecular-machine-learning/molecular.ipynb
@@ -4413,14 +4413,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "75a05d0d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Step 8: Generate submission\n",
     "# submission = pd.DataFrame({'Batch_ID': df_test['Batch_ID'], 'T80': y_pred_ensemble})\n",
-    "# submission.to_csv('submission.csv', index=False)\n",
+    "# submission.to_csv('submission20.csv', index=False)\n",
     "# print(\"\\nSubmission preview:\")\n",
     "# print(submission.head(10))"
    ]
@@ -4431,7 +4431,10 @@
    "id": "755bcec4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# save the model\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
