add_rain_project

--- a/Binary Prediction with a Rainfall/the_rain.ipynb
+++ b/Binary Prediction with a Rainfall/the_rain.ipynb
@@ -308,6 +308,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6005a31b",
+   "metadata": {},
+   "source": [
+    "## Rainfall Class Distribution\n",
+    "\n",
+    "### 📊 Bar Plot:\n",
+    "A bar plot showing the count of rainfall classes (`0` = No Rain, `1` = Rain).\n",
+    "\n",
+    "### 🔍 Insights:\n",
+    "- The dataset is **imbalanced**, with more instances of **rainfall = 1 (rain)** than **rainfall = 0 (no rain)**.\n",
+    "- This suggests the need for **stratified sampling** during cross-validation to maintain class distribution.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "2dd76900",
@@ -340,6 +355,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0d9a2599",
+   "metadata": {},
+   "source": [
+    "## Feature Distribution by Rainfall Class\n",
+    "\n",
+    "### 📈 KDE Plots:\n",
+    "KDE plots comparing the distribution of each feature for `rainfall = 0` and `rainfall = 1`.\n",
+    "\n",
+    "### 🔍 Insights:\n",
+    "- Features like **cloud**, **humidity**, and **dewpoint** show **distinct distributions** for rain vs. no rain, indicating strong **predictive power**.\n",
+    "- **Sunshine** has a clear separation, with **lower values associated with rainfall = 1**, confirming its importance as a feature.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "8853ff55",
@@ -362,6 +392,21 @@
     "sns.pairplot(df_train[key_features], hue='rainfall', palette='coolwarm', diag_kind='kde')\n",
     "plt.suptitle('Pairplot of Key Features by Rainfall', y=1.02, fontsize=16)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efbb7c1a",
+   "metadata": {},
+   "source": [
+    "## Pairplot of Features Colored by Rainfall\n",
+    "\n",
+    "### 🔗 Output:\n",
+    "A pairplot showing scatter plots for feature pairs and KDE plots on the diagonal, colored by `rainfall`.\n",
+    "\n",
+    "### 🔍 Insights:\n",
+    "- Strong correlations between **cloud**, **humidity**, and **dewpoint** are visible, suggesting interactions that **feature engineering** can capture.\n",
+    "- The plot of **sunshine vs. cloud** shows a **negative relationship**, with **low sunshine and high cloud cover associated with rain**.\n"
    ]
   },
   {
@@ -409,6 +454,21 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4c45af8",
+   "metadata": {},
+   "source": [
+    "## Correlation Heatmap\n",
+    "\n",
+    "### 🌡️ Output:\n",
+    "Heatmap showing **correlation coefficients** between features and `rainfall`.\n",
+    "\n",
+    "### 🔍 Insights:\n",
+    "- **Cloud** and **humidity** have **positive correlations** with rainfall, while **sunshine** has a **negative correlation**.\n",
+    "- High correlations between **maxtemp**, **temperature**, and **mintemp** suggest potential **multicollinearity**, which can be addressed through **feature engineering**.\n"
    ]
   },
   {
@@ -472,6 +532,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14ae237b",
+   "metadata": {},
+   "source": [
+    "## Polar Plots: Wind Speed & Direction by Rainfall\n",
+    "\n",
+    "### 🧭 Output:\n",
+    "Polar plots showing **wind speed** and **wind direction** distributions for `rainfall = 0` (no rain) and `rainfall = 1` (rain).\n",
+    "\n",
+    "### 🔍 Insights:\n",
+    "- **Wind direction patterns** differ between rain and no-rain scenarios, with **stronger winds in certain directions associated with rainfall**.\n",
+    "- This visualization highlights the importance of **winddirection** and **windspeed** in **feature engineering**.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "id": "3f434d04",
@@ -509,6 +584,21 @@
     "    plt.grid(True, linestyle='--', alpha=0.7)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7947b68",
+   "metadata": {},
+   "source": [
+    "## Rolling Statistics: Cloud, Sunshine, and Humidity\n",
+    "\n",
+    "### 📊 Output:\n",
+    "Line plots showing **7-day rolling mean**, **max**, and **min** for **cloud**, **sunshine**, and **humidity**.\n",
+    "\n",
+    "### 🔍 Insights:\n",
+    "- **Temporal trends** reveal **periodic patterns** in **cloud** and **sunshine**, suggesting **seasonal effects**.\n",
+    "- **Humidity** remains relatively **stable**, with **occasional spikes** that may align with **rainfall events**.\n"
    ]
   },
   {
@@ -554,6 +644,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a1a9a15c",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering\n",
+    "\n",
+    "### 🔍 Insights:\n",
+    "- Generated **13 new features** capturing **interactions** and **temporal patterns**.\n",
+    "- **Dropped redundant columns** to reduce **dimensionality**, focusing on the most **predictive features**.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "id": "2e962f51",
@@ -569,6 +671,18 @@
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95a23a32",
+   "metadata": {},
+   "source": [
+    "## Feature Scaling\n",
+    "\n",
+    "### 🔍 Insights:\n",
+    "- **Standardized features** to ensure compatibility with **distance-based** (e.g., KNN) and **gradient-based** (e.g., logistic regression) models.\n",
+    "- **Saved the scaler** for consistent preprocessing in the **Streamlit app**.\n"
    ]
   },
   {
@@ -643,6 +757,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e51c0119",
+   "metadata": {},
+   "source": [
+    "## ROC Curve: CatBoost Classifier\n",
+    "\n",
+    "### 📉 Visualization:\n",
+    "ROC curve for **CatBoost**, with **AUC = 0.8829** annotated.\n",
+    "\n",
+    "### 🔍 Insights:\n",
+    "- Focused on **CatBoost**, the **best-performing model** from previous analysis, to **streamline** the notebook.\n",
+    "- Achieved a **high AUC (0.8829)**, indicating **strong predictive performance**.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "id": "2c3e2341",
@@ -673,6 +802,21 @@
     "plt.xlabel('Importance', fontsize=12)\n",
     "plt.ylabel('Feature', fontsize=12)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c93498b",
+   "metadata": {},
+   "source": [
+    "## Feature Importance: Engineered Features\n",
+    "\n",
+    "### 📊 Visualization:\n",
+    "Bar plot showing **feature importance**, with **cloud_sun_ratio** and **dew_humidity/sun** as the top features.\n",
+    "\n",
+    "### 🔍 Insights:\n",
+    "- Engineered features dominate the **importance ranking**, validating the **feature engineering** approach.\n",
+    "- **cloud_sun_ratio** is critical, reflecting the **interplay between cloud cover and sunshine** in **rainfall prediction**.\n"
    ]
   },
   {
