mushroom project add

--- a/Diabetes Classification/21.ipynb
+++ b/Diabetes Classification/21.ipynb
@@ -1,28 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "9b8f3c86",
+   "cell_type": "markdown",
+   "id": "91c7bb39",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# CELL 1: MARKDOWN\n",
-    "\"\"\"\n",
+    "\n",
     "# Diabetes Prediction Analysis\n",
     "**Author:** Sajjad Ali Shah  \n",
     "**LinkedIn:** [Sajjad Ali Shah](https://www.linkedin.com/in/sajjad-ali-shah47/)  \n",
     "**Dataset:** [Diabetes Dataset](https://www.kaggle.com/datasets/johndasilva/diabetes)  \n",
     "\n",
-    "This notebook performs a comprehensive analysis for diabetes prediction, including data exploration, feature engineering, visualizations, and machine learning model evaluation.\n",
-    "\"\"\"\n",
-    "\n",
-    "# CELL 2: MARKDOWN\n",
-    "\"\"\"\n",
-    "## Import Libraries\n",
-    "\"\"\"\n",
-    "\n",
-    "# CELL 3: CODE\n",
+    "This notebook performs a comprehensive analysis for diabetes prediction, including data exploration, feature engineering, visualizations, and machine learning model evaluation.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b8f3c86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
