--- a/molecular-machine-learning/mol.ipynb
+++ b/molecular-machine-learning/mol.ipynb
@@ -457,38 +457,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "d4c41edd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Submission saved to submission.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Step 10: Generate submission\n",
-    "submission = pd.DataFrame({'Batch_ID': df_test['Batch_ID'], 'T80': y_pred_ensemble})\n",
-    "submission.to_csv('submission2.csv', index=False)\n",
-    "print(\"\\nSubmission saved to submission.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fcb54d7e",
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# # Step 10: Generate submission\n",
+    "# submission = pd.DataFrame({'Batch_ID': df_test['Batch_ID'], 'T80': y_pred_ensemble})\n",
+    "# submission.to_csv('submission2.csv', index=False)\n",
+    "# print(\"\\nSubmission saved to submission.csv\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sign_language_env",
+   "display_name": "Rec_sys_env",
    "language": "python",
    "name": "python3"
   },
@@ -502,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
