--- a/Time Serires Hourly Energy Consumption/Time_series.ipynb
+++ b/Time Serires Hourly Energy Consumption/Time_series.ipynb
@@ -108,7 +108,8 @@
     "PJME_hourly=pd.read_csv('./Data/PJME_hourly.csv',index_col=[0],parse_dates=[0])\n",
     "AEP_hourly=pd.read_csv('./Data/AEP_hourly.csv',index_col=[0],parse_dates=[0])\n",
     "COMED_hourly=pd.read_csv('./Data/COMED_hourly.csv',index_col=[0],parse_dates=[0])\n",
-    "AEP_hourly=pd.read_csv('./Data/AEP_hourly.csv',index_col=[0],parse_dates=[0])\n"
+    "AEP_hourly=pd.read_csv('./Data/AEP_hourly.csv',index_col=[0],parse_dates=[0])\n",
+    "FE_hourly=pd.read_csv('./Data/FE_hourly.csv',index_col=[0],parse_dates=[0])\n"
    ]
   },
   {
