--- a/Time Serires Hourly Energy Consumption/Time_series.ipynb
+++ b/Time Serires Hourly Energy Consumption/Time_series.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,8 @@
     "AEP_hourly=pd.read_csv('./Data/AEP_hourly.csv',index_col=[0],parse_dates=[0])\n",
     "COMED_hourly=pd.read_csv('./Data/COMED_hourly.csv',index_col=[0],parse_dates=[0])\n",
     "AEP_hourly=pd.read_csv('./Data/AEP_hourly.csv',index_col=[0],parse_dates=[0])\n",
-    "FE_hourly=pd.read_csv('./Data/FE_hourly.csv',index_col=[0],parse_dates=[0])\n"
+    "FE_hourly=pd.read_csv('./Data/FE_hourly.csv',index_col=[0],parse_dates=[0])\n",
+    "PJMW_hourly=pd.read_csv('./Data/PJMW_hourly.csv',index_col=[0],parse_dates=[0])\n"
    ]
   },
   {
