--- a/Time Serires Hourly Energy Consumption/Time_series.ipynb
+++ b/Time Serires Hourly Energy Consumption/Time_series.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,6 +111,83 @@
     "AEP_hourly=pd.read_csv('./Data/AEP_hourly.csv',index_col=[0],parse_dates=[0])\n",
     "FE_hourly=pd.read_csv('./Data/FE_hourly.csv',index_col=[0],parse_dates=[0])\n",
     "PJMW_hourly=pd.read_csv('./Data/PJMW_hourly.csv',index_col=[0],parse_dates=[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FE_MW</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Datetime</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2011-12-31 01:00:00</th>\n",
+       "      <td>6222.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-12-31 02:00:00</th>\n",
+       "      <td>5973.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-12-31 03:00:00</th>\n",
+       "      <td>5778.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-12-31 04:00:00</th>\n",
+       "      <td>5707.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-12-31 05:00:00</th>\n",
+       "      <td>5691.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      FE_MW\n",
+       "Datetime                   \n",
+       "2011-12-31 01:00:00  6222.0\n",
+       "2011-12-31 02:00:00  5973.0\n",
+       "2011-12-31 03:00:00  5778.0\n",
+       "2011-12-31 04:00:00  5707.0\n",
+       "2011-12-31 05:00:00  5691.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FE_hourly.head()"
    ]
   },
   {
