--- a/Time Serires Hourly Energy Consumption/Time_series.ipynb
+++ b/Time Serires Hourly Energy Consumption/Time_series.ipynb
@@ -109,13 +109,14 @@
     "AEP_hourly=pd.read_csv('./Data/AEP_hourly.csv',index_col=[0],parse_dates=[0])\n",
     "COMED_hourly=pd.read_csv('./Data/COMED_hourly.csv',index_col=[0],parse_dates=[0])\n",
     "AEP_hourly=pd.read_csv('./Data/AEP_hourly.csv',index_col=[0],parse_dates=[0])\n",
-    "FE_hourly=pd.read_csv('./Data/FE_hourly.csv',index_col=[0],parse_dates=[0])\n",
-    "PJMW_hourly=pd.read_csv('./Data/PJMW_hourly.csv',index_col=[0],parse_dates=[0])\n"
+    "FE_hourly=pd.read_csv('./Data/FE_hourly.csv')\n",
+    "PJMW_hourly=pd.read_csv('./Data/PJMW_hourly.csv',index_col=[0],parse_dates=[0])\n",
+    "DEOK_hourly=pd.read_csv('./Data/DEOK_hourly.csv',index_col=[0],parse_dates=[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -139,32 +140,34 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>FE_MW</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Datetime</th>\n",
-       "      <th></th>\n",
+       "      <th>FE_MW</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2011-12-31 01:00:00</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2011-12-31 01:00:00</td>\n",
        "      <td>6222.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2011-12-31 02:00:00</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2011-12-31 02:00:00</td>\n",
        "      <td>5973.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2011-12-31 03:00:00</th>\n",
+       "      <th>2</th>\n",
+       "      <td>2011-12-31 03:00:00</td>\n",
        "      <td>5778.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2011-12-31 04:00:00</th>\n",
+       "      <th>3</th>\n",
+       "      <td>2011-12-31 04:00:00</td>\n",
        "      <td>5707.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2011-12-31 05:00:00</th>\n",
+       "      <th>4</th>\n",
+       "      <td>2011-12-31 05:00:00</td>\n",
        "      <td>5691.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -172,16 +175,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                      FE_MW\n",
-       "Datetime                   \n",
-       "2011-12-31 01:00:00  6222.0\n",
-       "2011-12-31 02:00:00  5973.0\n",
-       "2011-12-31 03:00:00  5778.0\n",
-       "2011-12-31 04:00:00  5707.0\n",
-       "2011-12-31 05:00:00  5691.0"
+       "              Datetime   FE_MW\n",
+       "0  2011-12-31 01:00:00  6222.0\n",
+       "1  2011-12-31 02:00:00  5973.0\n",
+       "2  2011-12-31 03:00:00  5778.0\n",
+       "3  2011-12-31 04:00:00  5707.0\n",
+       "4  2011-12-31 05:00:00  5691.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
