--- a/Time Serires Hourly Energy Consumption/Time_series.ipynb
+++ b/Time Serires Hourly Energy Consumption/Time_series.ipynb
@@ -111,7 +111,8 @@
     "AEP_hourly=pd.read_csv('./Data/AEP_hourly.csv',index_col=[0],parse_dates=[0])\n",
     "FE_hourly=pd.read_csv('./Data/FE_hourly.csv')\n",
     "PJMW_hourly=pd.read_csv('./Data/PJMW_hourly.csv',index_col=[0],parse_dates=[0])\n",
-    "DEOK_hourly=pd.read_csv('./Data/DEOK_hourly.csv',index_col=[0],parse_dates=[0])\n"
+    "DEOK_hourly=pd.read_csv('./Data/DEOK_hourly.csv',index_col=[0],parse_dates=[0])\n",
+    "NI_hourly=pd.read_csv('./Data/NI_hourly.csv',index_col=[0],parse_dates=[0])\n"
    ]
   },
   {
