--- a/Time Serires Hourly Energy Consumption/Time_series.ipynb
+++ b/Time Serires Hourly Energy Consumption/Time_series.ipynb
@@ -95,7 +95,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "from statsmodels.tsa.arima.model import ARIMA"
    ]
   },
   {
@@ -104,34 +106,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the data\n",
-    "PJME_hourly=pd.read_csv('./Data/PJME_hourly.csv',index_col=[0],parse_dates=[0])\n",
-    "AEP_hourly=pd.read_csv('./Data/AEP_hourly.csv',index_col=[0],parse_dates=[0])\n",
-    "COMED_hourly=pd.read_csv('./Data/COMED_hourly.csv',index_col=[0],parse_dates=[0])\n",
-    "AEP_hourly=pd.read_csv('./Data/AEP_hourly.csv',index_col=[0],parse_dates=[0])\n",
-    "FE_hourly=pd.read_csv('./Data/FE_hourly.csv')\n",
-    "PJMW_hourly=pd.read_csv('./Data/PJMW_hourly.csv',index_col=[0],parse_dates=[0])\n",
-    "DEOK_hourly=pd.read_csv('./Data/DEOK_hourly.csv',index_col=[0],parse_dates=[0])\n",
-    "NI_hourly=pd.read_csv('./Data/NI_hourly.csv',index_col=[0],parse_dates=[0])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load all datasets (adjust paths as needed)\n",
+    "# Load all CSV files\n",
     "data_files = {\n",
-    "    'PJME': './Data/PJME_hourly.csv',\n",
     "    'AEP': './Data/AEP_hourly.csv',\n",
     "    'COMED': './Data/COMED_hourly.csv',\n",
-    "    'FE': './Data/FE_hourly.csv',\n",
-    "    'PJMW': './Data/PJMW_hourly.csv',\n",
+    "    'DAYTON': './Data/DAYTON_hourly.csv',\n",
     "    'DEOK': './Data/DEOK_hourly.csv',\n",
-    "    'NI': './Data/NI_hourly.csv'\n",
-    "}\n",
-    "\n",
+    "    'DOM': './Data/DOM_hourly.csv',\n",
+    "    'DUQ': './Data/DUQ_hourly.csv',\n",
+    "    'EKPC': './Data/EKPC_hourly.csv',\n",
+    "    'FE': './Data/FE_hourly.csv',\n",
+    "    'NI': './Data/NI_hourly.csv',\n",
+    "    'PJME': './Data/PJME_hourly.csv',\n",
+    "    'PJMW': './Data/PJMW_hourly.csv',\n",
+    "    'pjm_est': './Data/pjm_hourly_est.csv',\n",
+    "    'PJM_Load': './Data/PJM_Load_hourly.csv'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Dictionary to store DataFrames\n",
     "data = {}\n",
     "for region, file in data_files.items():\n",
@@ -140,23 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PJME Stats:\n",
-      "             PJME_MW\n",
-      "count  145366.000000\n",
-      "mean    32080.222831\n",
-      "std      6464.012166\n",
-      "min     14544.000000\n",
-      "25%     27573.000000\n",
-      "50%     31421.000000\n",
-      "75%     35650.000000\n",
-      "max     62009.000000\n",
       "AEP Stats:\n",
       "              AEP_MW\n",
       "count  121273.000000\n",
@@ -177,26 +165,16 @@
       "50%    11152.000000\n",
       "75%    12510.000000\n",
       "max    23753.000000\n",
-      "FE Stats:\n",
-      "              FE_MW\n",
-      "count  62874.000000\n",
-      "mean    7792.159064\n",
-      "std     1331.268006\n",
-      "min        0.000000\n",
-      "25%     6807.000000\n",
-      "50%     7700.000000\n",
-      "75%     8556.000000\n",
-      "max    14032.000000\n",
-      "PJMW Stats:\n",
-      "             PJMW_MW\n",
-      "count  143206.000000\n",
-      "mean     5602.375089\n",
-      "std       979.142872\n",
-      "min       487.000000\n",
-      "25%      4907.000000\n",
-      "50%      5530.000000\n",
-      "75%      6252.000000\n",
-      "max      9594.000000\n",
+      "DAYTON Stats:\n",
+      "           DAYTON_MW\n",
+      "count  121275.000000\n",
+      "mean     2037.851140\n",
+      "std       393.403153\n",
+      "min       982.000000\n",
+      "25%      1749.000000\n",
+      "50%      2009.000000\n",
+      "75%      2279.000000\n",
+      "max      3746.000000\n",
       "DEOK Stats:\n",
       "            DEOK_MW\n",
       "count  57739.000000\n",
@@ -207,6 +185,46 @@
       "50%     3013.000000\n",
       "75%     3449.000000\n",
       "max     5445.000000\n",
+      "DOM Stats:\n",
+      "              DOM_MW\n",
+      "count  116189.000000\n",
+      "mean    10949.203625\n",
+      "std      2413.946569\n",
+      "min      1253.000000\n",
+      "25%      9322.000000\n",
+      "50%     10501.000000\n",
+      "75%     12378.000000\n",
+      "max     21651.000000\n",
+      "DUQ Stats:\n",
+      "              DUQ_MW\n",
+      "count  119068.000000\n",
+      "mean     1658.820296\n",
+      "std       301.740640\n",
+      "min      1014.000000\n",
+      "25%      1444.000000\n",
+      "50%      1630.000000\n",
+      "75%      1819.000000\n",
+      "max      3054.000000\n",
+      "EKPC Stats:\n",
+      "            EKPC_MW\n",
+      "count  45334.000000\n",
+      "mean    1464.218423\n",
+      "std      378.868404\n",
+      "min      514.000000\n",
+      "25%     1185.000000\n",
+      "50%     1386.000000\n",
+      "75%     1699.000000\n",
+      "max     3490.000000\n",
+      "FE Stats:\n",
+      "              FE_MW\n",
+      "count  62874.000000\n",
+      "mean    7792.159064\n",
+      "std     1331.268006\n",
+      "min        0.000000\n",
+      "25%     6807.000000\n",
+      "50%     7700.000000\n",
+      "75%     8556.000000\n",
+      "max    14032.000000\n",
       "NI Stats:\n",
       "              NI_MW\n",
       "count  58450.000000\n",
@@ -216,7 +234,67 @@
       "25%     9954.000000\n",
       "50%    11521.000000\n",
       "75%    12896.750000\n",
-      "max    23631.000000\n"
+      "max    23631.000000\n",
+      "PJME Stats:\n",
+      "             PJME_MW\n",
+      "count  145366.000000\n",
+      "mean    32080.222831\n",
+      "std      6464.012166\n",
+      "min     14544.000000\n",
+      "25%     27573.000000\n",
+      "50%     31421.000000\n",
+      "75%     35650.000000\n",
+      "max     62009.000000\n",
+      "PJMW Stats:\n",
+      "             PJMW_MW\n",
+      "count  143206.000000\n",
+      "mean     5602.375089\n",
+      "std       979.142872\n",
+      "min       487.000000\n",
+      "25%      4907.000000\n",
+      "50%      5530.000000\n",
+      "75%      6252.000000\n",
+      "max      9594.000000\n",
+      "pjm_est Stats:\n",
+      "                 AEP         COMED         DAYTON          DEOK  \\\n",
+      "count  121273.000000  66497.000000  121275.000000  57739.000000   \n",
+      "mean    15499.513717  11420.152112    2037.851140   3105.096486   \n",
+      "std      2591.399065   2304.139517     393.403153    599.859026   \n",
+      "min      9581.000000   7237.000000     982.000000    907.000000   \n",
+      "25%     13630.000000   9780.000000    1749.000000   2687.000000   \n",
+      "50%     15310.000000  11152.000000    2009.000000   3013.000000   \n",
+      "75%     17200.000000  12510.000000    2279.000000   3449.000000   \n",
+      "max     25695.000000  23753.000000    3746.000000   5445.000000   \n",
+      "\n",
+      "                 DOM            DUQ          EKPC            FE            NI  \\\n",
+      "count  116189.000000  119068.000000  45334.000000  62874.000000  58450.000000   \n",
+      "mean    10949.203625    1658.820296   1464.218423   7792.159064  11701.682943   \n",
+      "std      2413.946569     301.740640    378.868404   1331.268006   2371.498701   \n",
+      "min      1253.000000    1014.000000    514.000000      0.000000   7003.000000   \n",
+      "25%      9322.000000    1444.000000   1185.000000   6807.000000   9954.000000   \n",
+      "50%     10501.000000    1630.000000   1386.000000   7700.000000  11521.000000   \n",
+      "75%     12378.000000    1819.000000   1699.000000   8556.000000  12896.750000   \n",
+      "max     21651.000000    3054.000000   3490.000000  14032.000000  23631.000000   \n",
+      "\n",
+      "                PJME           PJMW      PJM_Load  \n",
+      "count  145366.000000  143206.000000  32896.000000  \n",
+      "mean    32080.222831    5602.375089  29766.427408  \n",
+      "std      6464.012166     979.142872   5849.769954  \n",
+      "min     14544.000000     487.000000  17461.000000  \n",
+      "25%     27573.000000    4907.000000  25473.000000  \n",
+      "50%     31421.000000    5530.000000  29655.000000  \n",
+      "75%     35650.000000    6252.000000  33073.250000  \n",
+      "max     62009.000000    9594.000000  54030.000000  \n",
+      "PJM_Load Stats:\n",
+      "        PJM_Load_MW\n",
+      "count  32896.000000\n",
+      "mean   29766.427408\n",
+      "std     5849.769954\n",
+      "min    17461.000000\n",
+      "25%    25473.000000\n",
+      "50%    29655.000000\n",
+      "75%    33073.250000\n",
+      "max    54030.000000\n"
      ]
     }
    ],
