--- a/Time Serires Hourly Energy Consumption/Time_series.ipynb
+++ b/Time Serires Hourly Energy Consumption/Time_series.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,184 +137,255 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AEP Stats:\n",
-      "              AEP_MW\n",
-      "count  121273.000000\n",
-      "mean    15499.513717\n",
-      "std      2591.399065\n",
-      "min      9581.000000\n",
-      "25%     13630.000000\n",
-      "50%     15310.000000\n",
-      "75%     17200.000000\n",
-      "max     25695.000000\n",
-      "\n",
-      "COMED Stats:\n",
-      "           COMED_MW\n",
-      "count  66497.000000\n",
-      "mean   11420.152112\n",
-      "std     2304.139517\n",
-      "min     7237.000000\n",
-      "25%     9780.000000\n",
-      "50%    11152.000000\n",
-      "75%    12510.000000\n",
-      "max    23753.000000\n",
-      "\n",
-      "DAYTON Stats:\n",
-      "           DAYTON_MW\n",
-      "count  121275.000000\n",
-      "mean     2037.851140\n",
-      "std       393.403153\n",
-      "min       982.000000\n",
-      "25%      1749.000000\n",
-      "50%      2009.000000\n",
-      "75%      2279.000000\n",
-      "max      3746.000000\n",
-      "\n",
-      "DEOK Stats:\n",
-      "            DEOK_MW\n",
-      "count  57739.000000\n",
-      "mean    3105.096486\n",
-      "std      599.859026\n",
-      "min      907.000000\n",
-      "25%     2687.000000\n",
-      "50%     3013.000000\n",
-      "75%     3449.000000\n",
-      "max     5445.000000\n",
-      "\n",
-      "DOM Stats:\n",
-      "              DOM_MW\n",
-      "count  116189.000000\n",
-      "mean    10949.203625\n",
-      "std      2413.946569\n",
-      "min      1253.000000\n",
-      "25%      9322.000000\n",
-      "50%     10501.000000\n",
-      "75%     12378.000000\n",
-      "max     21651.000000\n",
-      "\n",
-      "DUQ Stats:\n",
-      "              DUQ_MW\n",
-      "count  119068.000000\n",
-      "mean     1658.820296\n",
-      "std       301.740640\n",
-      "min      1014.000000\n",
-      "25%      1444.000000\n",
-      "50%      1630.000000\n",
-      "75%      1819.000000\n",
-      "max      3054.000000\n",
-      "\n",
-      "EKPC Stats:\n",
-      "            EKPC_MW\n",
-      "count  45334.000000\n",
-      "mean    1464.218423\n",
-      "std      378.868404\n",
-      "min      514.000000\n",
-      "25%     1185.000000\n",
-      "50%     1386.000000\n",
-      "75%     1699.000000\n",
-      "max     3490.000000\n",
-      "\n",
-      "FE Stats:\n",
-      "              FE_MW\n",
-      "count  62874.000000\n",
-      "mean    7792.159064\n",
-      "std     1331.268006\n",
-      "min        0.000000\n",
-      "25%     6807.000000\n",
-      "50%     7700.000000\n",
-      "75%     8556.000000\n",
-      "max    14032.000000\n",
-      "\n",
-      "NI Stats:\n",
-      "              NI_MW\n",
-      "count  58450.000000\n",
-      "mean   11701.682943\n",
-      "std     2371.498701\n",
-      "min     7003.000000\n",
-      "25%     9954.000000\n",
-      "50%    11521.000000\n",
-      "75%    12896.750000\n",
-      "max    23631.000000\n",
-      "\n",
-      "PJME Stats:\n",
-      "             PJME_MW\n",
-      "count  145366.000000\n",
-      "mean    32080.222831\n",
-      "std      6464.012166\n",
-      "min     14544.000000\n",
-      "25%     27573.000000\n",
-      "50%     31421.000000\n",
-      "75%     35650.000000\n",
-      "max     62009.000000\n",
-      "\n",
-      "PJMW Stats:\n",
-      "             PJMW_MW\n",
-      "count  143206.000000\n",
-      "mean     5602.375089\n",
-      "std       979.142872\n",
-      "min       487.000000\n",
-      "25%      4907.000000\n",
-      "50%      5530.000000\n",
-      "75%      6252.000000\n",
-      "max      9594.000000\n",
-      "\n",
-      "pjm_est Stats:\n",
-      "                 AEP         COMED         DAYTON          DEOK  \\\n",
-      "count  121273.000000  66497.000000  121275.000000  57739.000000   \n",
-      "mean    15499.513717  11420.152112    2037.851140   3105.096486   \n",
-      "std      2591.399065   2304.139517     393.403153    599.859026   \n",
-      "min      9581.000000   7237.000000     982.000000    907.000000   \n",
-      "25%     13630.000000   9780.000000    1749.000000   2687.000000   \n",
-      "50%     15310.000000  11152.000000    2009.000000   3013.000000   \n",
-      "75%     17200.000000  12510.000000    2279.000000   3449.000000   \n",
-      "max     25695.000000  23753.000000    3746.000000   5445.000000   \n",
-      "\n",
-      "                 DOM            DUQ          EKPC            FE            NI  \\\n",
-      "count  116189.000000  119068.000000  45334.000000  62874.000000  58450.000000   \n",
-      "mean    10949.203625    1658.820296   1464.218423   7792.159064  11701.682943   \n",
-      "std      2413.946569     301.740640    378.868404   1331.268006   2371.498701   \n",
-      "min      1253.000000    1014.000000    514.000000      0.000000   7003.000000   \n",
-      "25%      9322.000000    1444.000000   1185.000000   6807.000000   9954.000000   \n",
-      "50%     10501.000000    1630.000000   1386.000000   7700.000000  11521.000000   \n",
-      "75%     12378.000000    1819.000000   1699.000000   8556.000000  12896.750000   \n",
-      "max     21651.000000    3054.000000   3490.000000  14032.000000  23631.000000   \n",
-      "\n",
-      "                PJME           PJMW      PJM_Load  \n",
-      "count  145366.000000  143206.000000  32896.000000  \n",
-      "mean    32080.222831    5602.375089  29766.427408  \n",
-      "std      6464.012166     979.142872   5849.769954  \n",
-      "min     14544.000000     487.000000  17461.000000  \n",
-      "25%     27573.000000    4907.000000  25473.000000  \n",
-      "50%     31421.000000    5530.000000  29655.000000  \n",
-      "75%     35650.000000    6252.000000  33073.250000  \n",
-      "max     62009.000000    9594.000000  54030.000000  \n",
-      "\n",
-      "PJM_Load Stats:\n",
-      "        PJM_Load_MW\n",
-      "count  32896.000000\n",
-      "mean   29766.427408\n",
-      "std     5849.769954\n",
-      "min    17461.000000\n",
-      "25%    25473.000000\n",
-      "50%    29655.000000\n",
-      "75%    33073.250000\n",
-      "max    54030.000000\n",
-      "\n"
-     ]
-    }
-   ],
+   "source": [
+    "## End-to-End Data Science Pipeline for PJM Hourly Energy Consumption\n",
+    "This section provides a complete, reproducible workflow: data loading, cleaning, feature engineering, EDA, visualization, modeling, and evaluation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "from statsmodels.tsa.arima.model import ARIMA\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "import os\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "plt.style.use('seaborn-v0_8-darkgrid')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Data Loading\n",
+    "Load all regional CSV files into a dictionary for easy access and processing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_files = {\n",
+    "    'AEP': './Data/AEP_hourly.csv',\n",
+    "    'COMED': './Data/COMED_hourly.csv',\n",
+    "    'DAYTON': './Data/DAYTON_hourly.csv',\n",
+    "    'DEOK': './Data/DEOK_hourly.csv',\n",
+    "    'DOM': './Data/DOM_hourly.csv',\n",
+    "    'DUQ': './Data/DUQ_hourly.csv',\n",
+    "    'EKPC': './Data/EKPC_hourly.csv',\n",
+    "    'FE': './Data/FE_hourly.csv',\n",
+    "    'NI': './Data/NI_hourly.csv',\n",
+    "    'PJME': './Data/PJME_hourly.csv',\n",
+    "    'PJMW': './Data/PJMW_hourly.csv',\n",
+    "    'pjm_est': './Data/pjm_hourly_est.csv',\n",
+    "    'PJM_Load': './Data/PJM_Load_hourly.csv'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {}\n",
+    "for region, file in data_files.items():\n",
+    "    if os.path.exists(file):\n",
+    "        data[region] = pd.read_csv(file, index_col=0, parse_dates=True)\n",
+    "    else:\n",
+    "        print(f'Warning: {file} not found.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Feature Engineering\n",
+    "Add time-based features to each DataFrame for richer analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for region, df in data.items():\n",
-    "    stats = df.describe()\n",
-    "    print(f\"{region} Stats:\\n{stats}\\n\")"
+    "    df['Year'] = df.index.year\n",
+    "    df['Month'] = df.index.month\n",
+    "    df['Day'] = df.index.day\n",
+    "    df['Hour'] = df.index.hour\n",
+    "    df['DayOfWeek'] = df.index.dayofweek\n",
+    "    df['IsWeekend'] = df['DayOfWeek'].isin([5, 6]).astype(int)\n",
+    "    df['Quarter'] = (df['Month'] - 1) // 3 + 1\n",
+    "    df['Season'] = np.select([\n",
+    "        df['Month'].isin([12, 1, 2]),\n",
+    "        df['Month'].isin([3, 4, 5]),\n",
+    "        df['Month'].isin([6, 7, 8])],\n",
+    "        ['Winter', 'Spring', 'Summer'],\n",
+    "        default='Fall')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Descriptive Statistics\n",
+    "Summarize each region's data using `describe()` and display as a combined table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_summary = {region: df.describe() for region, df in data.items()}\n",
+    "stats_df = pd.concat(stats_summary, axis=1)\n",
+    "display(stats_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Correlation Analysis\n",
+    "Combine key regions and visualize their correlation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key_regions = ['PJME', 'PJM_Load', 'AEP', 'DOM']\n",
+    "combined = pd.concat([\n",
+    "    df[f'{region}_MW'].rename(region) for region, df in data.items() if f'{region}_MW' in df.columns and region in key_regions],\n",
+    "    axis=1\n",
+    ")\n",
+    "correlation = combined.corr()\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.heatmap(correlation, annot=True, cmap='coolwarm', vmin=-1, vmax=1)\n",
+    "plt.title('Correlation of Power Consumption (Key Regions)')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Peak Hour Analysis\n",
+    "Analyze average hourly consumption for key regions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for region in key_regions:\n",
+    "    if f'{region}_MW' in data[region].columns:\n",
+    "        peak_hour = data[region].groupby('Hour')[f'{region}_MW'].mean()\n",
+    "        plt.figure(figsize=(10, 5))\n",
+    "        peak_hour.plot(kind='bar', color='skyblue')\n",
+    "        plt.title(f'Average Hourly Consumption - {region}')\n",
+    "        plt.xlabel('Hour of Day')\n",
+    "        plt.ylabel('Power (MW)')\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Time Series Decomposition (PJME)\n",
+    "Decompose the PJME time series to analyze trend, seasonality, and residuals."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decomposition = seasonal_decompose(data['PJME']['PJME_MW'].dropna(), period=24*365)\n",
+    "decomposition.plot()\n",
+    "plt.suptitle('Seasonal Decomposition of PJME Energy Consumption', y=1.02)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Seasonal Trend Analysis (PJME)\n",
+    "Analyze how average hourly consumption varies by season."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasonal_trends = data['PJME'].groupby(['Season', 'Hour'])['PJME_MW'].mean().unstack()\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "seasonal_trends.plot(ax=plt.gca())\n",
+    "plt.title('Seasonal Hourly Trends for PJME')\n",
+    "plt.xlabel('Hour of Day')\n",
+    "plt.ylabel('Average Power (MW)')\n",
+    "plt.legend(title='Season')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. ARIMA Forecasting (PJME)\n",
+    "Fit an ARIMA model to forecast the next 24 hours of PJME energy consumption and evaluate the results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pjme_series = data['PJME']['PJME_MW'].dropna()\n",
+    "train, test = pjme_series[:-24], pjme_series[-24:]\n",
+    "model = ARIMA(train, order=(1, 1, 1))\n",
+    "model_fit = model.fit()\n",
+    "forecast = model_fit.forecast(steps=24)\n",
+    "mae = mean_absolute_error(test, forecast)\n",
+    "rmse = np.sqrt(mean_squared_error(test, forecast))\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.plot(test.index, test, label='Actual')\n",
+    "plt.plot(test.index, forecast, label='Forecast', linestyle='--')\n",
+    "plt.title('24-Hour Forecast for PJME')\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('Power (MW)')\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "print(f'MAE: {mae:.2f}, RMSE: {rmse:.2f}')"
    ]
   },
   {
@@ -339,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
